.env and docker updated

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=auth_con
+DB_HOST=postgres_dock
 DB_USER=postgres
-DB_NAME=auth
+DB_NAME=booking
 DB_PASSWORD=root
 DB_PORT=5432
 LOGPATH=logs/info.log   
